--- a/aquambpayments2/index.html
+++ b/aquambpayments2/index.html
@@ -264,7 +264,8 @@
 ></canvas>
 
 <!-- Mobile deep-links for the WC URI -->
-<div id="wcDeepLinks" style="display:none;margin-top:8px;display:flex;flex-direction:column;gap:4px;">
+<div id="wcDeepLinks"
+     style="display:none;margin-top:8px;flex-direction:column;gap:4px;">
   <button id="lobstrDeepBtn" style="width:100%;">
     📱 Open in LOBSTR (mobile)
   </button>
