--- a/aquariusswaptest16.8/index.html
+++ b/aquariusswaptest16.8/index.html
@@ -61,7 +61,7 @@
 
   <!-- Page-specific styles for Swap / Lock / APR -->
   <style>
-    :root { --bg:#0b0f12; --panel:#12181d; --ink:#e8f0f6; --muted:#94a3ad; --accent:#7d4bd1; --accent-2:#4fd1c5; --err:#ff6b6b; --ok:#57d29a; --border:#1c242c; }
+    :root { --bg:#0b0f12; --panel:#3b3c7a; --ink:#e8f0f6; --muted:#94a3ad; --accent:#7d4bd1; --accent-2:#4fd1c5; --err:#ff6b6b; --ok:#57d29a; --border:#1c242c; }
     * { box-sizing: border-box; }
     html,body { margin:0; background:var(--bg); color:var(--ink); font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; }
     .wrap{max-width:980px;margin:28px auto;padding:0 16px}
