--- a/krwc/index.html
+++ b/krwc/index.html
@@ -75,8 +75,7 @@
                 </div>
               </div>
               <a href="https://mirrasets.com/reserves/" target="_self" style="font-weight:bold;">Reserves</a>
-              <a href="https://vote.aqua.network/?base=GBPC:GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC/" target="_blank" style="font-weight:bold;">AQUA Voting</a>
-              <a href="https://aqua.network/rewards/" target="_blank" style="font-weight:bold;">AQUA Rewards</a>
+              <a href="https://mirrasets.com/aquamb/" target="_self" style="font-weight:bold;">AQUAmb</a>
             </nav>
           </div>
 
