--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
               </div>
               <a href="https://mirrasets.com/reserves/" target="_self" style="font-weight:bold;">Reserves</a>
-              <a href="https://mirrasets.com/aquamb/" target="_blank" style="font-weight:bold;">AQUAmb</a>
+              <a href="https://mirrasets.com/aquamb/" target="_self" style="font-weight:bold;">AQUAmb</a>
             </nav>
           </div>
 
